work on filter by dates

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <div class="searchContainer">
             
             <input type="search" id="searchTodo" placeholder="Search todo">
+            <input id="all" type="radio" name="all" value="all">
+            <label for="all">All</label>
+            <input id="active" type="radio" name="active" value="active">
+            <label for="active">Active</label>
+            <input id="complete" type="radio" name="complete" value="complete">
+            <label for="complete">Complete</label>
             <select id="selectDate"></select>
          
         </div>
