finish toDo project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </form>
         <ul class="todoList"></ul>
         <div class="searchContainer">
-          <input type="search" id="searchTodo" placeholder="Search todo" />
+          <input type="search" id="searchTodo" placeholder="Search todo by name" />
           <div class="radioButtons">
             <input id="all" type="radio" name="radio" value="all" />
             <label for="all">All</label>
